// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen /> Debe de mostrar a batman y el valor del input en el query string 1`] = `
<div
  className="container"
>
  <h1
    className="fw-bold text-shadow-white"
  >
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-12 col-sm-5 bg-white rounded p-5 h-25"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control mb-3"
          name="hero"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <div
          className="d-grid gap-2"
        >
          <button
            className="btn btn-outline-success"
            type="submit"
          >
            Search
          </button>
        </div>
      </form>
    </div>
    <div
      className="col-12 col-sm-7"
    >
      <h4
        className="text-shadow-white"
      >
        Results
      </h4>
      <hr />
      <div
        className="card m-3"
      >
        <div
          className="row g-0"
        >
          <div
            className="col-md-4"
          >
            <img
              alt="dc-batman"
              className="img-fluid rounded-start"
              src="./assets/heroes/dc-batman.jpg"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Batman
              </h5>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <p
                className="card-text"
              />
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                  Detective Comics #27
                </small>
              </p>
              <a
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                Más
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> Debe de renderizarse correctamente 1`] = `
<div
  className="container"
>
  <h1
    className="fw-bold text-shadow-white"
  >
    Search Screen
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-12 col-sm-5 bg-white rounded p-5 h-25"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control mb-3"
          name="hero"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <div
          className="d-grid gap-2"
        >
          <button
            className="btn btn-outline-success"
            type="submit"
          >
            Search
          </button>
        </div>
      </form>
    </div>
    <div
      className="col-12 col-sm-7"
    >
      <h4
        className="text-shadow-white"
      >
        Results
      </h4>
      <hr />
      <div
        className="alert alert-info"
        role="alert"
      >
        Search a hero...
      </div>
    </div>
  </div>
</div>
`;
